--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-12  col-sm-11 col-md-11 col-lg-11 home " id="main-content">
                     <div class="d-flex flex-row justify-content-center align-items-center" style="height: 5vh;">
-                        <div class="p-2"><span class="lead" style="color: white;">CyberSpace</span></div>
+                        <div class="p-2"><span class="lead" style="color: white;">cyberSpace</span></div>
                         <div class="p-2" style="width: 100%; overflow: hidden;"><hr style="border-top: 1px solid rgb(219, 219, 219);"></div>
                         <div class="p-2 d-flex align-items-center justify-content-between">
                             <div class="d-inline"><span style="color: white;">Hello,</span></div>
