Renderer to Main

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.0.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-streaming@2.0.0"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400" rel="stylesheet">
     
@@ -357,6 +358,8 @@ function toggleDropdown(iconNumber) {
 
  
 </script>
+<script src="SendCommand.js"></script>
+
 <script src="Guage.js"></script>
 <script src="Guagecurrent.js"></script>
 <script src="Guageresistance.js"></script>
