--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+
+
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- External JavaScript libraries -->
   <script src="https://kit.fontawesome.com/2de36720fb.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -49,7 +52,7 @@
           </div>
         </div>
         <!-- Main content area -->
-        <div class="container" style="height: 100vh; width: 85vw; align-items: center;">
+        <div class="container" style="height: 100%; width: 100%; align-items: center;">
           <!-- Row with gauge charts -->
           <div class="row d-flex justify-content-around mb-1 mt-1">
             <div class="card">
@@ -65,7 +68,7 @@
           <!-- Row with additional content -->
           <div class="row d-flex justify-content-start mt-3 mb-1">
             <!-- Left column -->
-            <div class="col-md-4">
+            <div class="col-md-4 col-lg-4">
               <div class="cards1" style="height: 100%;">
                 <!-- Card for connection time -->
                 <div class="card1 red" style="text-align: center;">
@@ -185,7 +188,7 @@
               </div>
             </div>
             <!-- Right column -->
-            <div class="col-md-8">
+            <div class="col-md-8 col-lg-8">
               <div class="row d-flex justify-content-around">
                 <!-- Card with line chart -->
                 <div class="card2 mb-1" style="height: 33vh">
