--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 </div>
                 <!-- Card with dropdown menus -->
                 <div class="card1 blue">
-                  <div class="d-flex flex-column mt-2">
+                  <div class="d-flex flex-column justify-content-center" style="width: 23.5vw">
                     <!-- Dropdowns for gauge options -->
-                    <div class="row justify-content-between mb-4">
+                    <div class="row justify-content-between pb-2 pt-2">
                       <div class="col">
-                        <i class="fas fa-gauge" style="color: #329da8;font-size: 2em;" onclick="toggleDropdown(1)"></i>
+                        <i class="fas fa-gauge" style="color: #329da8;font-size: 3vw;" onclick="toggleDropdown(1)"></i>
                         <div id="dropdown-1" class="dropdown-content">
                           <p>Voltage</p>
                           <p>Current</p>
@@ -90,7 +90,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-gauge" style="color: #329da8;font-size: 2em;" onclick="toggleDropdown(2)"></i>
+                        <i class="fas fa-gauge" style="color: #329da8;font-size: 3vw;" onclick="toggleDropdown(2)"></i>
                         <div id="dropdown-2" class="dropdown-content">
                           <p>Current</p>
                           <p>Voltage</p>
@@ -98,7 +98,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-gauge" style="color: #329da8;font-size: 2em;" onclick="toggleDropdown(3)"></i>
+                        <i class="fas fa-gauge" style="color: #329da8;font-size: 3vw;" onclick="toggleDropdown(3)"></i>
                         <div id="dropdown-3" class="dropdown-content">
                           <p>Resistance</p>
                           <p>Voltage</p>
@@ -107,9 +107,9 @@
                       </div>
                     </div>
                     <!-- Dropdowns for chart options -->
-                    <div class="row justify-content-between mb-4">
+                    <div class="row justify-content-between pb-2 pt-2">
                       <div class="col">
-                        <i class="fas fa-chart-line" style="color: #329da8;font-size: 2em;" onclick="toggleDropdown(4)"></i>
+                        <i class="fas fa-chart-line" style="color: #329da8;font-size: 3vw;" onclick="toggleDropdown(4)"></i>
                         <div id="dropdown-4" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -117,7 +117,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-line" style="color: #329da8; font-size: 2em;" onclick="toggleDropdown(5)"></i>
+                        <i class="fas fa-chart-line" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(5)"></i>
                         <div id="dropdown-5" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -125,7 +125,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-line" style="color: #329da8; font-size: 2em;" onclick="toggleDropdown(6)"></i>
+                        <i class="fas fa-chart-line" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(6)"></i>
                         <div id="dropdown-6" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -134,9 +134,9 @@
                       </div>
                     </div>
                     <!-- Dropdowns for bar chart options -->
-                    <div class="row justify-content-between">
+                    <div class="row justify-content-between pb-2 pt-2">
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 2em;" onclick="toggleDropdown(7)"></i>
+                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(7)"></i>
                         <div id="dropdown-7" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -144,7 +144,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 2em;" onclick="toggleDropdown(8)"></i>
+                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(8)"></i>
                         <div id="dropdown-8" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -152,7 +152,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 2em;" onclick="toggleDropdown(9)"></i>
+                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(9)"></i>
                         <div id="dropdown-9" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -160,7 +160,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 2em;" onclick="toggleDropdown(10)"></i>
+                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(10)"></i>
                         <div id="dropdown-10" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -172,7 +172,7 @@
                 </div>
                 <!-- Card with connection status -->
                 <div class="card1 green">
-                  <div class="spinner-container p-2">
+                  <div class="spinner-container">
                     <div class="spin-container">
                       <span></span>
                       <span></span>
@@ -195,28 +195,28 @@
                 <div class="card2 mt-1 pr-4 pl-4 pt-2 pb-2" style="height: 32vh;">
                   <div class="d-flex flex-column">
                     <!-- Additional data for power and energy -->
-                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-3">
+                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-2 mt-2" style="height: 5vh;">
                       <div class="label">P<sub>in</sub></div>
                       <div class="column-wrapper">
                         <div class="column" id="pin"></div>
                       </div>
                       <div class="percentage" id="p1">--</div>
                     </div>
-                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-3">
+                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-2 mt-2" style="height: 5vh;">
                       <div class="label">P<sub>out</sub></div>
                       <div class="column-wrapper">
                         <div class="column" id="pout"></div>
                       </div>
                       <div class="percentage" id="p2">--</div>
                     </div>
-                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-3">
+                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-2 mt-2" style="height: 5vh;">
                       <div class="label">E<sub>in</sub></div>
                       <div class="column-wrapper">
                         <div class="column" id="ein"></div>
                       </div>
                       <div class="percentage" id="p3">--</div>
                     </div>
-                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-3">
+                    <div class="outer-wrapper d-flex align-items-center justify-content-between mb-2 mt-2" style="height: 5vh;">
                       <div class="label">E<sub>out</sub></div>
                       <div class="column-wrapper">
                         <div class="column" id="eout"></div>
