--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Sidebar buttons with Font Awesome icons -->
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Home" onclick="changeColor(this)"><i class="fas fa-house" style="font-size: 2em;"></i></button>
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Device" onclick="changeColor(this)"><i class="fas fa-bolt" style="font-size: 2em;"></i></button>
-        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Support" onclick="changeColor(this)"><i class="fas fa-gear" style="font-size: 2em;"></i></button>
+        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Support" onclick="window.location.href='backpage.html'"><i class="fas fa-gear" style="font-size: 2em;"></i></button>
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Settings" onclick="changeColor(this)"><i class="fas fa-circle-info" style="font-size: 2em;"></i></button>
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="About Us" onclick="changeColor(this)"><i class="fas fa-address-card" style="font-size: 2em;"></i></button>
       </div>
