--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
     <!-- Main row -->
     <div class="row vh-100">
       <!-- Sidebar column -->
-      <div class="col-10 col-sm-1 col-md-1 col-lg-1 text-white d-flex flex-column justify-content-start py-3" style="background-color: #2b3147; width: 10vw;">
+      <div class="col-10 col-sm-1 col-md-1 col-lg-1 text-white d-flex flex-column justify-content-start py-3" style="background-color: #252525 ; width: 10vw;">
         <!-- Sidebar buttons with Font Awesome icons -->
-        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Home" onclick="changeColor(this)"><i class="fas fa-house" style="font-size: 2em;"></i></button>
-        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Device" onclick="changeColor(this)"><i class="fas fa-bolt" style="font-size: 2em;"></i></button>
-        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Support" onclick="window.location.href='backpage.html'"><i class="fas fa-gear" style="font-size: 2em;"></i></button>
-        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Settings" onclick="changeColor(this)"><i class="fas fa-circle-info" style="font-size: 2em;"></i></button>
-        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="About Us" onclick="changeColor(this)"><i class="fas fa-address-card" style="font-size: 2em;"></i></button>
+        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Home" onclick=""><i class="fas fa-house" style="font-size: 3vw;"></i></button>
+        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Device" onclick=""><i class="fas fa-gear" style="font-size: 3vw;"></i></button>
+        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Settings" onclick="window.location.href='backpage.html'"><i class="fas fa-sliders" style="font-size: 3vw;"></i></button>
+        <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="About" onclick=""><i class="fas fa-circle-question" style="font-size: 3vw;"></i></button>
       </div>
       <!-- Main content column -->
       <div class="col-12 col-sm-11 col-md-11 col-lg-11 home" id="main-content">
