Large monitor solved

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Main row -->
     <div class="row vh-100">
       <!-- Sidebar column -->
-      <div class="col-10 col-sm-1 col-md-1 col-lg-1 text-white d-flex flex-column justify-content-start py-3" style="background-color: #252525 ; width: 10vw;">
+      <div class="col-1 col-sm-1 col-md-1 col-lg-1 text-white d-flex flex-column justify-content-start py-3" style="background-color: #252525 ;">
         <!-- Sidebar buttons with Font Awesome icons -->
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Home" onclick=""><i class="fas fa-house" style="font-size: 3vw;"></i></button>
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="Device" onclick=""><i class="fas fa-gear" style="font-size: 3vw;"></i></button>
@@ -35,7 +35,7 @@
         <button class="btn btn-link text-white my-md-2 my-lg-4" type="button" title="About" onclick=""><i class="fas fa-circle-question" style="font-size: 3vw;"></i></button>
       </div>
       <!-- Main content column -->
-      <div class="col-12 col-sm-11 col-md-11 col-lg-11 home" id="main-content">
+      <div class="col-11 col-sm-11 col-md-11 col-lg-11 home" id="main-content">
         <!-- Top section -->
         <div class="d-flex flex-row justify-content-center align-items-center" style="height: 5vh;">
           <div class="p-2"><span class="lead" style="color: white;">cyberSpace</span></div>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <!-- Main content area -->
-        <div class="container" style="height: 100%; width: 100%; align-items: center;">
+        <div class="container-fluid" style="height: 100%; width: 100%; align-items: center;">
           <!-- Row with gauge charts -->
           <div class="row d-flex justify-content-around mb-1 mt-1" style="height: 25%;">
             <div class="card">
