Clock bug resolved

--- a/backpage.html
+++ b/backpage.html
@@ -46,7 +46,7 @@
                 <div class="container-fluid" style="width: 70%; height: 95%; ">
                     <!-- Settings Heading -->
                     <div class="settings-heading">
-                        <h2>Settings</h2>
+                        <h2>Device Settings</h2>
                     </div>
                     <!-- Card for Variable A -->
                     <div class="card1 shadow">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
 
-                        <!-- Card for Variable C (Toggle) -->
+                        <!-- Card for Variable C (Dropdown) -->
                         <div class="row">
                             <div class="col name">
                                 <p style="font-size: 2vw;"> Variable C</p>
@@ -121,7 +121,7 @@
                             </div>
                         </div>
 
-                        <!-- Card for Variable E (Dropdown) -->
+                        <!-- Card for Variable E (Toggle) -->
                         <div class="row">
                             <div class="col name">
                                 <p style="font-size: 2vw;"> Variable E</p>
