--- a/connectionSettings.html
+++ b/connectionSettings.html
@@ -49,6 +49,7 @@
                         <h2>Connection Settings</h2>
                     </div>
 
+                    <!-- Card for Variable B (Dropdown) -->
                     <div class="card1 shadow">
                         <div class="row">
                             <div class="col name">
@@ -57,19 +58,19 @@
                             <div class="col">
                                 <div class="dropdown">
                                     <div class="select">
-                                        <span class="selected">Option 1</span>
+                                        <span class="selected">COM 10</span>
                                         <div class="caret"></div>
                                     </div>
                                     <ul class="options">
-                                        <li>Option 1</li>
-                                        <li>Option 2</li>
-                                        <li>Option 3</li>
+                                        <li>COM 10</li>
+                                        <li></li>
+                                        <li></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Card for Variable B -->
+                        <!-- Card for Variable B (Dropdown) -->
                         <div class="row">
                             <div class="col name">
                                 <p style="font-size: 2vw;">Braud Rate</p>
@@ -77,19 +78,19 @@
                             <div class="col">
                                 <div class="dropdown">
                                     <div class="select">
-                                        <span class="selected">Option 1</span>
+                                        <span class="selected">9600</span>
                                         <div class="caret"></div>
                                     </div>
                                     <ul class="options">
-                                        <li>Option 1</li>
-                                        <li>Option 2</li>
-                                        <li>Option 3</li>
+                                        <li>9600</li>
+                                        <li></li>
+                                        <li></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Card for Variable C (Toggle) -->
+                        <!-- Card for Variable C (Dropdown) -->
                         <div class="row">
                             <div class="col name">
                                 <p style="font-size: 2vw;">Parity</p>
@@ -97,19 +98,19 @@
                             <div class="col">                                
                                 <div class="dropdown">
                                     <div class="select">
-                                        <span class="selected">Option 1</span>
+                                        <span class="selected">None</span>
                                         <div class="caret"></div>
                                     </div>
                                     <ul class="options">
-                                        <li>Option 1</li>
-                                        <li>Option 2</li>
-                                        <li>Option 3</li>
+                                        <li>None</li>
+                                        <li>Even</li>
+                                        <li>Odd</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Card for Variable D (Toggle) -->
+                        <!-- Card for Variable D (Dropdown) -->
                         <div class="row">
                             <div class="col name">
                                 <p style="font-size: 2vw;">Slave ID</p>
@@ -118,13 +119,13 @@
                                 <!-- Checkbox for Variable D -->
                                 <div class="dropdown">
                                     <div class="select">
-                                        <span class="selected">Option 1</span>
+                                        <span class="selected">1</span>
                                         <div class="caret"></div>
                                     </div>
                                     <ul class="options">
-                                        <li>Option 1</li>
-                                        <li>Option 2</li>
-                                        <li>Option 3</li>
+                                        <li>1</li>
+                                        <li>2</li>
+                                        <li>3</li>
                                     </ul>
                                 </div>
                             </div>
