--- a/connectionSettings.html
+++ b/connectionSettings.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-
 <html>
 <head>
   <link rel="stylesheet" href="backstyle.css">
@@ -49,7 +47,7 @@
                         <h2>Connection Settings</h2>
                     </div>
 
-                    <!-- Card for Variable B (Dropdown) -->
+                    <!-- Card for Variable A (Dropdown) -->
                     <div class="card1 shadow">
                         <div class="row">
                             <div class="col name">
@@ -131,7 +129,6 @@
                             </div>
                         </div>
 
-                  
                     </div>
                 </div>
             </div>
@@ -184,19 +181,19 @@
 
 
 
-function updateScore() {
-  const slider = document.getElementById('myRange');
-  const slider1 = document.getElementById('myRange1');
-  const scoreElement = document.getElementById('score');
-  const scoreElement1 = document.getElementById('score1');
-  scoreElement.textContent = slider.value;
-  scoreElement1.textContent = slider1.value;
-}
-const slider = document.getElementById('myRange');
-const slider1 = document.getElementById('myRange1');
+    function updateScore() {
+    const slider = document.getElementById('myRange');
+    const slider1 = document.getElementById('myRange1');
+    const scoreElement = document.getElementById('score');
+    const scoreElement1 = document.getElementById('score1');
+    scoreElement.textContent = slider.value;
+    scoreElement1.textContent = slider1.value;
+    }
+    const slider = document.getElementById('myRange');
+    const slider1 = document.getElementById('myRange1');
 
-slider.addEventListener('input', updateScore);
-slider1.addEventListener('input', updateScore);
+    slider.addEventListener('input', updateScore);
+    slider1.addEventListener('input', updateScore);
 
 
 </script>
