added the link between icons and hovering of cards

--- a/connectionSettings.html
+++ b/connectionSettings.html
@@ -89,6 +89,63 @@
                             </div>
                         </div>
 
+                        <div class="row">
+                            <div class="col name">
+                                <p style="font-size: 2vw;">Braud Rate</p>
+                            </div>
+                            <div class="col">
+                                <div class="dropdown">
+                                    <div class="select">
+                                        <span class="selected">Option 1</span>
+                                        <div class="caret"></div>
+                                    </div>
+                                    <ul class="options">
+                                        <li>Option 1</li>
+                                        <li>Option 2</li>
+                                        <li>Option 3</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col name">
+                                <p style="font-size: 2vw;">Braud Rate</p>
+                            </div>
+                            <div class="col">
+                                <div class="dropdown">
+                                    <div class="select">
+                                        <span class="selected">Option 1</span>
+                                        <div class="caret"></div>
+                                    </div>
+                                    <ul class="options">
+                                        <li>Option 1</li>
+                                        <li>Option 2</li>
+                                        <li>Option 3</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col name">
+                                <p style="font-size: 2vw;">Braud Rate</p>
+                            </div>
+                            <div class="col">
+                                <div class="dropdown">
+                                    <div class="select">
+                                        <span class="selected">Option 1</span>
+                                        <div class="caret"></div>
+                                    </div>
+                                    <ul class="options">
+                                        <li>Option 1</li>
+                                        <li>Option 2</li>
+                                        <li>Option 3</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Card for Variable C (Toggle) -->
                         <div class="row">
                             <div class="col name">
