--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <!-- Dropdowns for bar chart options -->
                     <div class="row justify-content-between pb-2 pt-2">
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(7)" id="Bar-7"></i>
+                        <i class="fas fa-bars-progress" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(7)" id="Bar-7"></i>
                         <div id="dropdown-7" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -157,7 +157,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(8)" id="Bar-8"></i>
+                        <i class="fas fa-bars-progress" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(8)" id="Bar-8"></i>
                         <div id="dropdown-8" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -165,7 +165,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(9)" id="Bar-9"></i>
+                        <i class="fas fa-bars-progress" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(9)" id="Bar-9"></i>
                         <div id="dropdown-9" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -173,7 +173,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <i class="fas fa-chart-bar" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(10)" id="Bar-10"></i>
+                        <i class="fas fa-bars-progress" style="color: #329da8; font-size: 3vw;" onclick="toggleDropdown(10)" id="Bar-10"></i>
                         <div id="dropdown-10" class="dropdown-content">
                           <p>1</p>
                           <p>2</p>
@@ -248,10 +248,10 @@
       const barGaugeIcons = document.querySelectorAll('[id^="Bar-"] ');
       const barGaugeBars = document.querySelectorAll('.columnbar-wrapper');
       const newBarGaugeColors = [
-        "#FF5733",    // Color for the first bar gauge icon
-        "#33FF57",    // Color for the second bar gauge icon
-        "#3373FF", 
-        "#3373FF"   // Color for the third bar gauge icon
+        "#FFC107",    // Color for the first bar gauge icon
+        "#4caf50",    // Color for the second bar gauge icon
+        "#9C27B0", 
+        "#00BCD4"   // Color for the third bar gauge icon
         // Add more colors as needed for other icons
       ];
 
