--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Main content area -->
         <div class="container-fluid" style="height: auto; width: auto; align-items: center;">
           <!-- Row with gauge charts -->
-          <div class="row d-flex justify-content-around mb-1 mt-1" style="height: 25%;">
+          <div class="row d-flex justify-content-around  mt-1">
             <div class="card">
               <canvas id="gaugeChart"></canvas>
             </div>
@@ -76,7 +76,7 @@
             </div>
           </div>
           <!-- Row with additional content -->
-          <div class="row d-flex justify-content-start mt-3 mb-1">
+          <div class="row d-flex justify-content-start mt-3 pb-1">
             <!-- Left column -->
             <div class="col-4">
               <div class="cards1" style="height: 65vh">
