--- a/index.html
+++ b/index.html
@@ -27,41 +27,44 @@
     <!-- Main row -->
     <div class="row vh-100">
       <!-- Sidebar column -->
-      <div class="col-1 text-white d-flex flex-column justify-content-start py-5" style="background-color: #252525;">
+      <div class="col-2 text-white d-flex flex-column justify-content-start" style="background-color: #252525;">
+        <div class="d-flex justify-content-center mb-4 mt-4">
+          <img src="logo 2.svg" style="width: 100%;"> 
+        </div>
         <!-- Sidebar buttons with Font Awesome icons -->
         <button class="btn btn-link text-white my-4" type="button" title="Home" onclick="window.location.href='index.html'">
-          <div class="d-flex justify-content-start" style="margin-left: -40%;">
-            <i class="fas fa-house" style="font-size: 4vh; color:aqua;"></i>
-            <span class="d-none d-xl-inline ml-2" style="color: aqua;">Home</span>
+          <div class="d-flex justify-content-start buttons">
+            <i class="fas fa-house" style="font-size: 3vw; color:aqua;"></i>
+            <span class="ml-3" style="font-size: 2vw; color: aqua;">Home</span>
           </div>
         </button>
 
         <!-- Button for Settings with icon and text -->
         <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='backpage.html'">
-          <div class="d-flex justify-content-start" style="margin-left: -40%;">
-          <i class="fas fa-sliders" style="font-size: 4vh;"></i>
-          <span class="d-none d-xl-inline ml-2">Device</span>
+          <div class="d-flex justify-content-start buttons">
+            <i class="fas fa-sliders" style="font-size: 3vw;"></i>
+            <span class="ml-3" style="font-size: 2vw;">Device</span>
           </div>
         </button>
 
         <!-- Button for Device with icon and text -->
         <button class="btn btn-link text-white my-4" type="button" title="Device" onclick="window.location.href='connectionSettings.html'">
-          <div class="d-flex justify-content-start" style="margin-left: -40%;">
-            <i class="fas fa-gear" style="font-size: 4vh;"></i>
-            <span class="d-none d-xl-inline ml-2">Settings</span>
+          <div class="d-flex justify-content-start buttons">
+            <i class="fas fa-gear" style="font-size: 3vw;"></i>
+            <span class="ml-3" style="font-size: 2vw;">Settings</span>
             </div>
         </button>
 
         <!-- Button for About with icon and text -->
-        <button class="btn btn-link text-white my-4" type="button" title="About" onclick="window.location.href='about.html'">
-          <div class="d-flex justify-content-start" style="margin-left: -40%;">
-            <i class="fas fa-circle-question" style="font-size: 4vh;"></i>
-            <span class="d-none d-xl-inline ml-2">About</span>
+        <button class="btn btn-link text-white my-4 buttons" type="button" title="About" onclick="window.location.href='about.html'">
+          <div class="d-flex justify-content-start">
+            <i class="fas fa-circle-question" style="font-size: 3vw;"></i>
+            <span class="ml-3" style="font-size: 2vw;">About</span>
             </div>
         </button>
       </div>
       <!-- Main content column -->
-      <div class="col-11 home d-flex flex-column justify-content-start" id="main-content">
+      <div class="col-10 home d-flex flex-column justify-content-start" id="main-content">
         <!-- Top section -->
         <div class="d-flex flex-row justify-content-center align-items-center" style="height: 5vh;">
           <div class="p-2"><span class="lead" style="color: white;">cyberSpace</span></div>
